**feat(processor): JOINED 상속 지연 처리(deferred) 추가 및 FK 생성 안정화**
- `ProcessingContext`에 지연 처리용 큐/세트(`deferredEntities`, `deferredNames`) 도입
- `EntityHandler.processInheritanceJoin`에서 부모 엔티티 미등록 시 지연 큐로 등록하고 재시도
- `JpaSqlGeneratorProcessor.process`/`EntityHandler.runDeferredJoinedFks`에서 라운드 말 재시도 수행
- 다층 상속 대응: `findNearestJoinedParentEntity`로 가장 가까운 JOINED 상위 엔티티 탐색
- JOINED 상속 관계를 `RelationshipType.JOINED_INHERITANCE`로 명시
- `processJoinTable(...)`가 관계 타입을 인자로 받아 JOINED/보조테이블 공통 경로로 처리
- PK=FK 보강: 자식 테이블에 부모 PK 메타를 반영하여 NOT NULL/PK 설정 보장

**test(handler): JOINED/SecondaryTable/EmbeddedId/상속 주입 시나리오 유닛 테스트 추가**

- 단순 엔티티 처리: ID 컬럼 생성·등록 검증
- `@EmbeddedId` 경로: 임베디드 처리 및 PK 마킹 검사
- JOINED 상속(정상): 부모 선등록 시 FK 생성 및 컬럼 매칭
- JOINED 상속(에러): `pkJoinColumns` 개수 불일치 시 오류 보고
- JOINED 상속(지연): 부모가 나중에 등록되면 `runDeferredJoinedFks()`로 FK 생성 재시도
- `@SecondaryTable` 단건: 관계 생성 및 자식 PK=FK 보강
- `@SecondaryTables` 복수: 서로 다른 FK 이름으로 2개 관계 생성 확인
- `@MappedSuperclass` 필드 상속 주입 검증
- Mockito stubbing 정리:
    - `DeclaredType.asElement()` → 올바른 상위 타입을 가리키도록 설정(무한루프 방지)
    - `context.getNaming().fkName(...)`/`context.findAllPrimaryKeyColumns(...)` 필수 스텁 추가
    - 리스트/배열/체이닝은 `doReturn(...).when(...)`로 안전 스텁
    - 필요 시 `lenient()`로 잠재적인 Strict stubbing 충돌 완화

**refactor(handler): 중복 엔티티 처리 정책 단순화(keep-first) 논의 반영 준비**

- 중복 발견 시 에러 로깅 후 조용히 반환(맵 갱신 불필요)로 흐름 정리 *(필요 시 별도 커밋에서 활성화)*

**Test Plan**

- `EntityHandlerTest` 전체 통과
- SecondaryTable 복수 케이스에서 관계 2건 생성 및 고유 FK 네이밍 확인
- JOINED 지연 재시도 케이스에서 부모 등록 후 FK가 생성되는지 확인